home pape layout bug fixed

--- a/styles/output.css
+++ b/styles/output.css
@@ -934,6 +934,14 @@ video {
   width: 2rem;
 }
 
+.w-40{
+  width: 10rem;
+}
+
+.w-36{
+  width: 9rem;
+}
+
 .min-w-\[150px\]{
   min-width: 150px;
 }
@@ -1046,6 +1054,14 @@ video {
 
 .gap-5{
   gap: 1.25rem;
+}
+
+.gap-6{
+  gap: 1.5rem;
+}
+
+.gap-2{
+  gap: 0.5rem;
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]){
@@ -1265,6 +1281,10 @@ video {
 
 .pt-5{
   padding-top: 1.25rem;
+}
+
+.pr-3{
+  padding-right: 0.75rem;
 }
 
 .text-left{
@@ -1646,12 +1666,20 @@ video {
     align-items: center;
   }
 
+  .md\:gap-0{
+    gap: 0px;
+  }
+
   .md\:pl-40{
     padding-left: 10rem;
   }
 
   .md\:pr-32{
     padding-right: 8rem;
+  }
+
+  .md\:pr-6{
+    padding-right: 1.5rem;
   }
 }
 
